# fast-lisa-subtraction

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  py_tests.yml
docs/: generate_api_indexes.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/indexes/: installation.md  simulating_catalogs.ipynb  subtraction_tutorial.ipynb
examples/: simulating_catalogs.ipynb  subtraction_tutorial.ipynb
scripts/: build_docs.sh
src/fast_lisa_subtraction/: __init__.py
src/fast_lisa_subtraction/priors/: __init__.py  analytical.py  copulas.py  galactic_binaries.py  population.py
src/fast_lisa_subtraction/simulation/: __init__.py  catalog.py  subtraction.py  tdi.py
src/fast_lisa_subtraction/utils/: __init__.py  interpolation.py  logger.py  plot.py  read_catalog.py  types.py  utility.py
tests/: test_catalog.py
